# gudgeon

./: .gitmodules  README.md
arduino_firmware/: arduino_firmware.ino
arduino_firmware_ledtest/: arduino_firmware_ledtest.ino
arduino_firmware_switchtest/: arduino_firmware_switchtest.ino
morse/: morse_to_audio.py
subsim/: :w  CMakeLists.txt  Doxyfile.in  README  event_system_readme.txt  version.h.in
subsim/client/: ArduinoHandler.cpp  ArduinoHandler.h  CMakeCache.txt  CMakeLists.txt  HelmStation.cpp  HelmStation.h  LobbyHandler.cpp  LobbyHandler.h  Makefile  MockUIEvents.h  SimulationMaster.cpp  SimulationMaster.h  TacticalStation.cpp  TacticalStation.h  UI.cpp  UI.h  VoiceHandler.cpp  VoiceHandler.h  cmake_install.cmake  main.cpp
subsim/client/HardwareInterface/: HardwareInterface.cpp  HardwareInterface.h  requests.h
subsim/client/HardwareInterface/usbapi/: Readme.txt
subsim/common/: BitStreamHelper.cpp  BitStreamHelper.h  ConfigParser.cpp  ConfigParser.h  Envelope.cpp  EventID.h  EventSystem.cpp  EventSystem.h  Exceptions.h  GenericParser.cpp  GenericParser.h  Globals.h  Lobby.cpp  Lobby.h  Log.h  Messages.cpp  Messages.h  Network.cpp  Network.h  SimulationEvents.h  Stations.h  TeamParser.cpp  TeamParser.h
subsim/game_master/: CMakeLists.txt  LobbyHandler.cpp  LobbyHandler.h  SimulationMaster.cpp  SimulationMaster.h  Targeting.cpp  Targeting.h  main.cpp
subsim/game_master/data/: test_game.cfg  training_8.cfg  two_player.cfg  two_player_caverns.cfg  two_vs_two.cfg
subsim/game_master/data/four_player/: asymmetric1.cfg  asymmetric2.cfg  caverns.cfg  clover.cfg  symmetric.cfg
subsim/game_master/data/one_player/: asymmetric1.cfg  asymmetric2.cfg  caverns.cfg  clover.cfg  training.cfg
subsim/game_master/data/six_player/: arrows.cfg  asymmetric1.cfg  asymmetric2.cfg  caverns.cfg  clover.cfg  minefield.cfg  symmetric.cfg  training.cfg
subsim/game_master/data/two_player/: asymmetric1.cfg  asymmetric2.cfg  caverns.cfg  clover.cfg  training.cfg
subsim/tests/: CMakeLists.txt  EventTest.cpp
